add socket data source, icon picking, tooltips

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <title>NVIDIA Morpheus</title>
   </head>
   <body>
-    <div id="react-root"></div>
-  </body>
+    <div id="controls">
+        <div class="btn-bar">
+            <button type="button" id="prev"/>
+            <button type="button" id="next"/>
+            <button type="button" id="play"/>
+        </div>
+    </div>
+</body>
 </html>
