--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>NVIDIA Morpheus</title>
   </head>
   <body>
-    <div id="controls">
-        <div class="btn-bar">
-            <button type="button" id="prev"/>
-            <button type="button" id="next"/>
-            <button type="button" id="play"/>
-        </div>
-    </div>
-</body>
+      <div id="react-root"></div>
+  </body>
 </html>
