use NVIDIA green in bootstrap components, fix packaging

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
   </head>
-  <body>
-      <div id="react-root"></div>
+  <body style="background-color: #1A1918">
+      <div id="react-root" style="height: 100%;"></div>
   </body>
 </html>
